security: restricted CORS config